[package]
name = "ping-pong-arkanoid"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3

[[bin]]
name = "client"
path = "client/src/main.rs"

[[bin]]
name = "server"
path = "server/src/main.rs"

[dependencies]
shared = { path = "shared" }
cgmath = { version = "0.18", features = ["serde"] }
raylib = "5.0.2"
wtransport = { version = "0.3.1", features = ["dangerous-configuration"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4.22"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }